Add prepare script

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"scripts": {
 		"build": "tsc",
 		"lint": "eslint",
-		"start": "npm run lint && npm run build && node build/index.js"
+		"start": "npm run lint && npm run build && node build/index.js",
+		"prepare": "npm run lint && npm run build"
 	}
 }
