--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"build": "tsc",
 		"lint": "eslint --cache --fix",
 		"start": "npm run lint && npm run build && node build/index.js",
+		"check": "npm run lint && tsc --noEmit",
 		"preinstall": "npm run build"
 	}
 }
