--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
 		"@typescript-eslint/eslint-plugin": "^5.30.5",
 		"@typescript-eslint/parser": "^5.30.5",
 		"eslint": "^8.19.0",
-		"typescript": "^4.7.4",
-		"mongoose": "^6.4.3"
+		"mongoose": "^6.4.3",
+		"typescript": "^4.7.4"
 	},
-	"dependencies": {},
 	"scripts": {
 		"build": "tsc",
 		"lint": "eslint --cache --fix",
