--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"typescript": "^4.9.3"
 	},
 	"scripts": {
-		"build": "tsc",
-		"lint": "eslint --cache --fix",
+		"build": "npx tsc",
+		"lint": "npx eslint --cache --fix",
 		"start": "npm run lint && npm run build && node build/index.js",
 		"check": "npm run lint && tsc --noEmit",
 		"preinstall": "npm run build"
