--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"build": "tsc",
 		"lint": "eslint --cache --fix",
 		"check": "npm run lint && tsc --noEmit",
-		"preinstall": "npm run build"
+		"preinstall": "npm run build",
+		"prepare": "npm run build"
 	}
 }
