--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
 	"version": "1.0.0",
 	"description": "API types for luyx-management",
 	"exports": {
-		"./v1": {
-			"require": "./build/v1/index.js",
-			"types": "./build/v1/index.d.ts"
-		}
+		"./v1": "./v1/index.js"
 	},
 	"type": "module",
 	"author": {
