build: revert dirs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"declaration": true, /* Generates corresponding '.d.ts' file. */
 		// "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
 		// "outFile": "./",                       /* Concatenate and emit output to single file. */
-		"outDir": "dist", /* Redirect output structure to the directory. */
+		"outDir": ".", /* Redirect output structure to the directory. */
 		"rootDir": "src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
 		// "rootDirs": [], /* Like 'rootDir', but can be specified multiple times to include multiple directories. */
 		// "composite": true,                     /* Enable project compilation */
@@ -62,6 +62,10 @@
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
 	"include": [
-		"src/**/*",
+		"src/**/*.ts",
+	],
+	"exclude": [
+		"./*.js",
+		"./*.d.ts",
 	]
 }
